# Fixed responsiveness on mobile devices.

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Zeyada&display=swap');
 
+html, body {
+    width: 100%;
+    overflow-x: hidden;
+}
+
 body {
     height: 100vh;
     display: flex;
